Modify pom to run tests in forked VM serially